--- a/static/less/styles.less
+++ b/static/less/styles.less
@@ -37,6 +37,11 @@ body {
     border: 1px solid @panelBorder;
 }
 
+.affix {
+    top: 20px;
+    width: 230px;
+}
+
 input {
     &[type="text"], &[type="password"] {
         .border-radius(0);
