--- a/templates/expenses/month_balance_panel.html
+++ b/templates/expenses/month_balance_panel.html
@@ -1,7 +1,7 @@
 {% load i18n %}
 {% load expenses_tags %}
 
-<div class="side-panel">
+<div class="side-panel affix-top" data-spy="affix" data-offset-top="40">
     <i id="balance-help" class="icon-question-sign close"></i>
     <h4>{% trans "Monthly balance:" %}</h4>
     <p>{{ average_balance.base|as_value:currency_symbol }}&nbsp;{{ average_balance.deviation|as_deviation }}</p>
