--- a/templates/base.html
+++ b/templates/base.html
@@ -41,6 +41,7 @@
         {% block body %}{% endblock body %}
 
         <script src="{% static "js/jquery.js" %}"></script>
+        <script src="{% static "js/jquery.mask.min.js" %}"></script>
         <script src="{% static "js/bootstrap.js" %}"></script>
         <script src="{% static "js/bootstrap-datepicker.js" %}"></script>
         <script src="{% static "js/locales/bootstrap-datepicker.pt-BR.js" %}" type="text/javascript"></script>
