--- a/templates/base.html
+++ b/templates/base.html
@@ -42,6 +42,7 @@
 
         <script src="{% static "js/jquery.js" %}"></script>
         <script src="{% static "js/jquery.mask.min.js" %}"></script>
+        <script src="{% static "js/jquery.maskMoney.js" %}"></script>
         <script src="{% static "js/bootstrap.js" %}"></script>
         <script src="{% static "js/bootstrap-datepicker.js" %}"></script>
         <script src="{% static "js/locales/bootstrap-datepicker.pt-BR.js" %}" type="text/javascript"></script>
