--- a/templates/base.html
+++ b/templates/base.html
@@ -20,6 +20,7 @@
         {% block extrahead %}{% endblock extrahead %}
     </head>
     <body>
+        {% block navbar %}
         <div class="navbar navbar-static-top">
             <div class="navbar-inner">
                 <div class="container container-fluid">
@@ -37,6 +38,7 @@
                 </div>
             </div>
         </div>
+        {% endblock navbar %}
 
         {% block body %}{% endblock body %}
 
