--- a/templates/angular/index.html
+++ b/templates/angular/index.html
@@ -4,10 +4,11 @@
 
 <html ng-app="expenses">
   <head>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.6/angular.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.6/angular-resource.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.1.4/angular.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.1.4/angular-resource.min.js"></script>
     <script src="{% static "js/app.js" %}"></script>
     <script src="{% static "js/controllers.js" %}"></script>
+    <script src="{% static "js/services.js" %}"></script>
   </head>
   <body>
     <div ng-view>
