--- a/templates/angular/category-list.html
+++ b/templates/angular/category-list.html
@@ -1,7 +1,7 @@
 {% verbatim %}
 <h2>Categories</h2>
 <ul>
-    <li ng-repeat="category in categories">
+    <li ng-repeat="category in categories.objects">
         <a href="#/category/{{category.id}}">{{category.name}}</a>
     </li>
 </ul>
