--- a/templates/webapp/forms/entry.html
+++ b/templates/webapp/forms/entry.html
@@ -8,11 +8,11 @@
 
     data-spy="affix"
     data-offset-top="40"
+    novalidate
     >
 
     {% csrf_token %}
 
-    {% verbatim %}
     <div class="control-group" ng-class="{error: entry-form.category.$invalid}">
         <div class="controls">
             <div class="input-prepend input-block-level">
@@ -23,17 +23,18 @@
                     name="category"
                     type="text"
                     autocomplete="off"
-                    value="{{ transaction.category }}"
+                    ng-model="transaction.category"
 
                     autofocus
-                    required/>
+                    required
+                    />
             </div>
 
             <span class="help-block" ng-show="entry-form.category.$error.required">Required</span>
         </div>
     </div>
 
-    <div class="control-group">
+    <div class="control-group" ng-class="{error: entry-form.value.$invalid}">
         <div class="controls">
             <div class="input-prepend input-block-level">
                 <span class="add-on">$</span>
@@ -42,12 +43,12 @@
                     name="value"
                     type="text"
                     autocomplete="off"
-                    value="{{ transaction.value }}"
+                    ng-model="transaction.value"
 
                     required/>
             </div>
 
-                <!-- <span class="help-block error"></span> -->
+            <span class="help-block" ng-show="entry-form.value.$error.required">Required</span>
         </div>
     </div>
 
@@ -61,16 +62,13 @@
                     name="description"
                     type="text"
                     autocomplete="off"
-                    value="{{ transaction.description }}"
-
-                    required/>
+                    ng-model="transaction.description"
+                    />
             </div>
-
-                <!-- <span class="help-block error"></span> -->
         </div>
     </div>
 
-    <div class="control-group">
+    <div class="control-group" ng-class="{error: entry-form.date.$invalid}">
         <div class="controls">
             <div class="input-prepend input-block-level">
                 <span class="add-on"><i class="icon-calendar"></i></span>
@@ -79,14 +77,14 @@
                     name="date"
                     type="text"
                     autocomplete="off"
-                    value="{{ transaction.date }}"
+                    ng-model="transaction.date"
+                    required
                     />
             </div>
 
-                <!-- <span class="help-block error"></span> -->
+            <span class="help-block" ng-show="entry-form.date.$error.required">Required</span>
         </div>
     </div>
-    {% endverbatim %}
 
     <button ng-click="submit()">{% trans "Submit" %}</button>
 </form>
