--- a/static/less/styles.less
+++ b/static/less/styles.less
@@ -140,7 +140,7 @@ span.category-label {
     .squared-well();
 }
 
-form[name="entry-form"] {
+form[name="entryform"] {
     .squared-well();
 
     input[type="submit"] {
