grouping and ordering transactions

--- a/templates/webapp/forms/entry.html
+++ b/templates/webapp/forms/entry.html
@@ -89,6 +89,7 @@
                     autocomplete="off"
                     />
             </div>
+            <span class="help-block" ng-show="errors.date">Required</span>
         </div>
     </div>
 
