adding some plugins to the form field

--- a/templates/webapp/forms/entry.html
+++ b/templates/webapp/forms/entry.html
@@ -46,6 +46,7 @@
                     type="text"
 
                     ng-model="transaction.value"
+                    ex-valuefield
 
                     autocomplete="off"
                     required
@@ -84,6 +85,7 @@
                     type="text"
 
                     ng-model="transaction.date"
+                    ex-datefield
 
                     required
                     autocomplete="off"
