--- a/templates/webapp/index.html
+++ b/templates/webapp/index.html
@@ -11,6 +11,7 @@
 <script src="{% static "js/app.js" %}"></script>
 <script src="{% static "js/controllers.js" %}"></script>
 <script src="{% static "js/services.js" %}"></script>
+<script src="{% static "js/directives.js" %}"></script>
 {% endblock extrahead %}
 
 {% block body %}
@@ -21,7 +22,3 @@
 </div> <!-- row -->
 
 {% endblock body %}
-
-{% block bodyend %}
-    <script type="text/javascript" src="{% static "js/entry-list.js" %}"></script>
-{% endblock bodyend %}
