finishing the form

--- a/templates/webapp/forms/entry.html
+++ b/templates/webapp/forms/entry.html
@@ -24,6 +24,7 @@
                     type="text"
 
                     ng-model="transaction.category"
+                    ex-categoryfield
 
                     autofocus
                     autocomplete="off"
