--- a/templates/webapp/transaction-list.html
+++ b/templates/webapp/transaction-list.html
@@ -32,9 +32,9 @@
                         <td> {{ transaction.description }}</td>
                         <td class="span1">{{ transaction.value | currency}}</td>
 
-                        <!-- <td class="span1 action-bar">
+                        <td class="span1 action-bar" ex-actionbar>
                             <i class="icon-trash delete-entry"></i>
-                        </td> -->
+                        </td>
                     </tr>
                 </tbody>
             </table> 
