fixing issue with IE

--- a/templates/webapp/index.html
+++ b/templates/webapp/index.html
@@ -16,7 +16,7 @@
 
 {% block body %}
 
-<div class="container" ng-app="webapp">
+<div class="container" ng-app="webapp" id="ng-app">
     <div class="row" ng-view>
     </div> <!-- container -->
 </div> <!-- row -->
