--- a/templates/base.html
+++ b/templates/base.html
@@ -17,10 +17,10 @@
             short_date_format = "{{ js_date_format }}";
         </script>
 
-        <script src="{% static "js/jquery.js" %}"></script>
+        <script src="{% static "js/jquery-1.10.1.min.js" %}"></script>
         <script src="{% static "js/jquery.mask.min.js" %}"></script>
         <script src="{% static "js/jquery.maskMoney.js" %}"></script>
-        <script src="{% static "js/bootstrap.js" %}"></script>
+        <script src="{% static "js/bootstrap.min.js" %}"></script>
         <script src="{% static "js/bootstrap-datepicker.js" %}"></script>
         <script src="{% static "js/locales/bootstrap-datepicker.pt-BR.js" %}" type="text/javascript"></script>
         <script src="{% url "django.views.i18n.javascript_catalog" %}" type="text/javascript"></script>
@@ -49,17 +49,6 @@
         {% endblock navbar %}
 
         {% block body %}{% endblock body %}
-
-
-        <script type="text/javascript">
-            $(function(){
-                $('.entry-row td.action-bar i.delete-entry').click(function(){
-                    var id = $(this).parent().parent().data('id');
-                    var form = $("<form action='/entries/" + id + "/delete/' method='POST'>{% csrf_token %}</form>");
-                    form.submit();
-                });
-            });
-        </script>
 
         {% block bodyend %}{% endblock bodyend %}
     </body>
