started work on a config dialog directive

--- a/templates/webapp/transaction-list.html
+++ b/templates/webapp/transaction-list.html
@@ -38,7 +38,9 @@
                         <td class="span1" ng-bind="transaction.value | currency"></td>
 
                         <td class="span1 action-bar" ex-actionbar ng-controller="TransactionActionBarCtrl">
-                            <i class="icon-trash delete-entry" ng-click="removeTransaction()"></i>
+                            <i
+                                class="icon-trash delete-entry"
+                            ></i>
                         </td>
                     </tr>
                 </tbody>
