--- a/templates/webapp/forms/entry.html
+++ b/templates/webapp/forms/entry.html
@@ -94,6 +94,6 @@
         </div>
     </div>
 
-    <button ng-click="submit()">{% trans "Submit" %}</button>
+    <button ng-click="submit()" ng-disabled="sending">{% trans "Submit" %}</button>
 </form>
 </div>
