--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -8590,7 +8590,7 @@ a.badge:focus {
   /* Darken IE7 buttons by default so they stand out more given they won't have borders */
 
   filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);
-  color: #000 !important;
+  color: #000;
 }
 .datepicker table tr td.today:hover,
 .datepicker table tr td.today:hover:hover,
@@ -8667,6 +8667,12 @@ a.badge:focus {
 .datepicker table tr td.today.disabled.active,
 .datepicker table tr td.today.disabled:hover.active {
   background-color: #fbf069 \9;
+}
+.datepicker table tr td.today:hover:hover {
+  color: #000;
+}
+.datepicker table tr td.today.active:hover {
+  color: #fff;
 }
 .datepicker table tr td.range,
 .datepicker table tr td.range:hover,
@@ -9092,18 +9098,19 @@ a.badge:focus {
 .datepicker table tr td span.active.disabled:hover.active {
   background-color: #003399 \9;
 }
-.datepicker table tr td span.old {
+.datepicker table tr td span.old,
+.datepicker table tr td span.new {
   color: #999999;
 }
 .datepicker th.datepicker-switch {
   width: 145px;
 }
 .datepicker thead tr:first-child th,
-.datepicker tfoot tr:first-child th {
+.datepicker tfoot tr th {
   cursor: pointer;
 }
 .datepicker thead tr:first-child th:hover,
-.datepicker tfoot tr:first-child th:hover {
+.datepicker tfoot tr th:hover {
   background: #eeeeee;
 }
 .datepicker .cw {
