seeting up locale, using pt-br

--- a/templates/webapp/index.html
+++ b/templates/webapp/index.html
@@ -8,6 +8,7 @@
 {% block extrahead %}
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.1.5/angular.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.1.5/angular-resource.js"></script>
+<script src="{% static "js/locales/angular-locale_pt-br.js" %}"></script>
 <script src="{% static "js/app.js" %}"></script>
 <script src="{% static "js/controllers.js" %}"></script>
 <script src="{% static "js/services.js" %}"></script>
