loading icon on submit button

--- a/templates/webapp/forms/entry.html
+++ b/templates/webapp/forms/entry.html
@@ -82,6 +82,6 @@
         </div>
     </div>
 
-    <button ng-click="submit()" ng-disabled="sending">{% trans "Submit" %}</button>
+    <button ng-click="submit()" ng-disabled="sending">{% trans "Submit" %}<i ng-show="sending" class="icon-spinner icon-spin icon-large"></i></button>
 </form>
 </div>
