titles on the panels

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -9453,6 +9453,10 @@ span.category-label-inverse {
 span.category-label-inverse[href] {
   background-color: #1a1a1a;
 }
+.panel-title {
+  text-align: center;
+  margin-bottom: 30px;
+}
 /*
  * /GLOBAL STYLES
  */
