--- a/static/less/styles.less
+++ b/static/less/styles.less
@@ -107,6 +107,11 @@ span.category-label {
     font-weight: normal;
 }
 
+.panel-title {
+    text-align: center;
+    margin-bottom: 30px;
+}
+
 /*
  * /GLOBAL STYLES
  */
