--- a/templates/webapp/forms/entry.html
+++ b/templates/webapp/forms/entry.html
@@ -10,6 +10,8 @@
     data-offset-top="40"
     novalidate
     >
+    
+    <h4 class="panel-title">{% trans "New transaction" %}</h4>
 
     <div class="control-group" ng-class="{error: errors.category}">
         <div class="controls">
