--- a/templates/webapp/month_balance_panel.html
+++ b/templates/webapp/month_balance_panel.html
@@ -10,7 +10,7 @@
 
     <i id="balance-help" class="icon-question-sign close"></i>
 
-    <h4>{% trans "Balance" %}</h4>
+    <h4 class="panel-title">{% trans "Balance" %}</h4>
     {% verbatim %}
     <p>
         <span
