--- a/static/less/styles.less
+++ b/static/less/styles.less
@@ -26,6 +26,22 @@ body {
     }
 }
 
+.datepicker {
+    border: 1px solid #ccc;
+	.border-radius(0px) !important;
+
+	/*table tr td {
+		&.active,
+		&.active:hover,
+		&.active.disabled,
+		&.active.disabled:hover {
+			.buttonBackground(@btnPrimaryBackground, spin(@btnPrimaryBackground, 20));
+			color: #fff;
+			text-shadow: 0 -1px 0 rgba(0,0,0,.25);
+		}
+    }*/
+}
+
 /*
  * /OVERRIDES
  */
