--- a/static/less/styles.less
+++ b/static/less/styles.less
@@ -26,6 +26,10 @@ body {
     }
 }
 
+.popover {
+    .border-radius(0px) !important;
+}
+
 .datepicker {
     border: 1px solid #ccc;
 	.border-radius(0px) !important;
